# baykeShop

./: .gitignore  CHANGELOG.md  README.md  mysql.cnf  pyproject.toml  requirements.txt
bayke/: settings.py  urls.py
baykeshop/: urls.py
baykeshop/conf/: __init__.py  defaults.py
baykeshop/conf/test/: baykebanner.json  baykecategory.json  baykegoods.json  baykegoodsbanners.json  baykeproduct.json  baykespec.json  baykespecoptions.json
baykeshop/management/commands/: create_menu.py  create_test.py
baykeshop/migrations/: 0001_initial.py  0002_alter_baykecategory_pic.py  0002_baykecategory_baykegoods_categorys.py  0003_baykecategory_parent.py  0003_baykegoods_freight.py  0004_baykemenu_baykepermission.py  0004_baykeorderinfo_baykeordergoods.py  0005_alter_baykecategory_managers_and_more.py  0005_alter_baykeorderinfo_total_amount.py  0006_alter_baykeorderinfo_total_amount.py  0006_baykebanner.py  0007_alter_baykeproduct_options_baykegoods_pic.py  0007_alter_baykeuserbalancelog_owner_and_more.py  0008_alter_baykeproduct_options_baykeproduct_cost_price_and_more.py  0008_baykeupload.py  0009_baykearticletag_baykearticlecategory_baykearticle.py  0009_baykegoodsbanners_baykegoods_banners.py  0010_remove_baykegoods_banners_baykegoodsbanners_goods.py  0011_baykeshopingcart_baykeshopingcart_unique_owner_sku.py  0012_baykeuserinfo_baykeuserbalancelog_baykeshopaddress.py
baykeshop/models/: __init__.py  _abs.py  context.py  tinymce_field.py
baykeshop/module/admin/: __init__.py  models.py  options.py  sites.py
baykeshop/module/article/: admin.py  filters.py  models.py  page.py  serializer.py  test.py  urls.py  views.py
baykeshop/module/cart/: models.py  serializers.py  urls.py  views.py
baykeshop/module/comment/: admin.py  models.py  page.py  serializer.py  urls.py  views.py
baykeshop/module/order/: admin.py  filters.py  models.py  page.py  serializer.py  urls.py  views.py
baykeshop/public/: models.py  pagination.py  renderers.py  serializers.py  sites.py  urls.py  utils.py  views.py
baykeshop/templatetags/: bayke_tags.py
project/: db.sqlite3
project/project/: settings.py  urls.py
src/baykeshop/: __init__.py  urls.py
(+389 files in other folders)
