[project]
name = "baykeshop"
version = "2.0.1-alpha"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "轻编程", email = "2539909370@qq.com" }
]
requires-python = ">=3.11.10"
dependencies = [
    "alipay-sdk-python>=3.7.345",
    "django==4.2.17",
    "djangorestframework>=3.15.2",
    "pillow>=11.0.0",
    "pyecharts>=2.0.7",
]

[tool.hatch.build]
package-dir = { "baykeshop" = "src/baykeshop" }
packages = [
    "src/baykeshop"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
