[project]
name = "baykeshop"
version = "1.3.13"
description = "BaykeShop开源商城系统，基于django框架！"
readme = "README.md"
authors = [
    { name = "轻编程", email = "2539909370@qq.com" }
]
requires-python = ">=3.11.10"
dependencies = [
    "alipay-sdk-python>=3.7.345",
    "django==4.2.17",
    "djangorestframework>=3.15.2",
    "pillow>=11.0.0",
    "pyecharts>=2.0.7",
]

[tool.hatch.build]
package-dir = { "baykeshop" = "src/baykeshop" }
packages = [
    "src/baykeshop"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "daphne>=4.1.2",
]
